Fix error: image displayed in basket in Firefox browser is too large.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ html{
 }
 
 img{
-    max-width:100%;
+    width:100%;
 }
 
 #showProduct{
